@@ -36,8 +36,10 @@
 </div>
 </div>
 
-<div id="filter-box" class="uibox">
-  <roundcube:object name="filterframe" id="filter-frame" style="width:100%; height:96%" frameborder="0" src="/watermark.html" />
+<div id="filter-box" class="uibox contentbox">
+  <div class="iframebox">
+    <roundcube:object name="filterframe" id="filter-frame" style="width:100%; height:100%" frameborder="0" src="/watermark.html" />
+  </div>
   <roundcube:object name="message" id="message" class="statusbar" />
 </div>
 
